objects/SFMC_Credentials__mdt.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>account_id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFMC_Credentials</label>
    <listViews>
        <fullName>Full_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>client_id__c</columns>
        <columns>client_secret__c</columns>
        <columns>account_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full View</label>
    </listViews>
    <pluralLabel>SFMC_Credentials</pluralLabel>
</CustomObject>